feat: adicionei definições

--- a/bluestyle.css
+++ b/bluestyle.css
@@ -1,7 +1,18 @@
 body{
-    background-color: lightblue
+    font-family:Helvetica;
+    background-color: lightblue;
 }
+img {
+    width: 200px;
+    }
 h1{
     color:navy;
     margin-left: 20px;
+    text-align: center;
+}
+footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
 }
